Cambios en la interfaz de el módulo de las categorías.

--- a/src/app/categories/categories-table/categories-table.html
+++ b/src/app/categories/categories-table/categories-table.html
@@ -78,7 +78,7 @@
                 <!-- Datos De la tabla -->
                 @for (categoria of categoriasFiltradas; let i = $index; track categoria.id_categoria) {
                     <tr
-                        class="border-t border-[#3B3B3B] hover:bg-[#1f1f1f] transition">
+                        class="border-b border-[#3B3B3B] hover:bg-[#1f1f1f] transition">
                         <th class="font-thin p-4">
                             <i [class]="icons[+categoria.icono]" class="p-2 bg-[#46E24D] rounded-full"></i>
                         </th>
