--- a/src/app/categories/categories.html
+++ b/src/app/categories/categories.html
@@ -2,7 +2,7 @@
     <div class="w-full flex flex-col">
         <button
             (click)="goBackToDash()"
-            class="bg-green-primary flex items-center justify-center rounded-full w-10 h-auto p-2"
+            class="bg-green-primary flex items-center justify-center rounded-full w-10 h-auto p-2 mb-4 ml-2"
         >
             <i class='bx  bx-chevron-left text-black text-2xl'  ></i> 
         </button>
