Se implemento la creacíon de los proveedores y clientes.

--- a/src/app/account/info-account/info-account.html
+++ b/src/app/account/info-account/info-account.html
@@ -64,7 +64,7 @@
                     class="w-full h-full flex flex-col gap-2 items-center justify-center">
                     <div class="w-full flex flex-row items-center justify-between">
                         <h2 class="text-2xl font-semibold">Información Personal</h2>
-                        <button (click)="closeModal()" class="text-3xl">
+                        <button type="button" (click)="closeModal()" class="text-3xl">
                             <i class='bx  bx-x'  ></i> 
                         </button>
                     </div>
