--- a/src/app/persons/persons.css
+++ b/src/app/persons/persons.css
@@ -13,3 +13,34 @@
 .filter-inactivate {
     background-color: var(--color-zinc-800);
 }
+
+.modal {
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 500px;
+    height: 400px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0.02);
+    transition: all 0.20s ease;
+}
+
+.animate {
+    opacity: 1;
+    transform: scale(1);
+}
