--- a/src/app/transactions/transactions.html
+++ b/src/app/transactions/transactions.html
@@ -64,7 +64,9 @@
                     class=" card flex-1 text-black bg-green-primary rounded-xl py-2 font-light">
                     Nueva Transacción
                 </button>
-                <button class="card flex-1 border border-green-500 rounded-xl py-2 font-light">
+                <button
+                    (click)="openEditModal()"
+                    class="card flex-1 border border-green-500 rounded-xl py-2 font-light">
                     Editar Transacción
                 </button>
             </div>
@@ -167,14 +169,15 @@
         </div>
 
         <!-- Tabla de transacciones -->
-        <div class="bg-zinc-800 md:rounded-tr-2xl overscroll-none overflow-auto">
-            <table class="w-full text-center">
-                <thead class="text-white">
+        <div class="bg-zinc-800 h-78 md:rounded-tr-2xl rounded-b-2xl overscroll-none overflow-auto">
+            <table class="w-full  text-center">
+                <thead class="text-white bg-[#151515] sticky top-0 z-20">
                     <tr class="bg-zinc-900">
                         <th class="font-thin p-4">ID</th>
                         <th class="font-thin p-4">Categoría</th>
                         <th class="font-thin p-4">Subcategoría</th>
                         <th class="font-thin p-4">Perfil Responsable</th>
+                        <th class="font-thin p-4">Cliente o Proveeodr</th>
                         <th class="font-thin p-4">Monto</th>
                         <th class="font-thin p-4">Fecha de transacción</th>
                         <th class="font-thin p-4">Estatus</th>
@@ -182,20 +185,21 @@
                 </thead>
 
                 <tbody>
-                    @for (transaccion of transacciones; track transaccion.id) {
-                        <tr>
-                            <td class="font-thin p-4">{{transaccion.id}}</td>
+                    @for (transaccion of transacciones; track transaccion.id_transaccion) {
+                        <tr class="border-b border-[#3B3B3B] hover:bg-[#1f1f1f] transition">
+                            <td class="font-thin p-4">{{transaccion.id_transaccion}}</td>
                             <td class="font-thin p-4">{{transaccion.categoria}}</td>
                             <td class="font-thin p-4">{{transaccion.subcategoria}}</td>
-                            <td class="font-thin p-4">{{transaccion.perfilResponsable}}</td>
-                            <td class="font-thin p-4">{{transaccion.monto}}</td>
-                            <td class="font-thin p-4">{{transaccion.fechaTransaccion}}</td>
+                            <td class="font-thin p-4">{{transaccion.perfil}}</td>
+                            <td class="font-thin p-4">{{transaccion.persona}}</td>
+                            <td class="font-thin p-4">${{transaccion.monto_total}}</td>
+                            <td class="font-thin p-4">{{transaccion.fecha_transaccion}}</td>
                             <td class="font-thin p-4">{{transaccion.estatus}}</td>
                         </tr>
                     }
                     @empty {
                         <tr>
-                            <td colspan="7" class="font-thin p-4 text-center">
+                            <td colspan="8" class="font-thin p-4 text-center">
                                 No hay transacciones en el mes actual.
                             </td>
                         </tr>
@@ -230,12 +234,16 @@
                             <label for="categoria">Categoría</label>
                             <select
                                 formControlName="categoria" 
+                                (change)="onCategoriaChange($event)" 
                                 class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
-                                @for (categoria of categorias; track categoria.id) {
-                                    <option value="">{{categoria.nombre}}</option>
+                                @if (categorias.length > 0) {
+                                    <option [value]="null">-- Seleccione Categoria --</option>
+                                }
+                                @for (categoria of categorias; track categoria.id_categoria) {
+                                    <option [value]="categoria.id_categoria">{{categoria.nombre}}</option>
                                 }
                                 @empty {
-                                    <option value="">No hay categorías</option>
+                                    <option [value]="">No hay categorías</option>
                                 }
                             </select>
                         </div>
@@ -243,13 +251,16 @@
                         <div class="w-full flex flex-col gap-2 items-start justify-start">
                             <label for="subcategoria">Subcategoría</label>
                             <select
-                                formControlName="subcategoria" 
+                                formControlName="subcategoria"
                                 class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
-                                @for (subcategoria of subcategorias; track subcategoria.id) {
-                                    <option value="">{{subcategoria.nombre}}</option>
+                                @if (subcategorias.length > 0) {
+                                    <option [value]="null">-- Seleccione Subcategoria --</option>
+                                }
+                                @for (subcategoria of subcategorias; track subcategoria.id_subcategoria) {
+                                    <option [value]="subcategoria.id_subcategoria">{{subcategoria.nombre}}</option>
                                 }
                                 @empty {
-                                    <option value="">No hay subcategorías</option>
+                                    <option [value]="null">No hay subcategorías</option>
                                 }
                             </select>
                         </div>
@@ -303,7 +314,7 @@
                                     <option value="">{{persona.nombre}}</option>
                                 }
                                 @empty {
-                                    <option value="">No hay categorías</option>
+                                    <option value="">No hay clientes o proveedores</option>
                                 }
                             </select>
                         </div>
@@ -317,6 +328,199 @@
                         </button>
                     </section>
                 </form>
+            </div>
+        </div>
+    }
+    @if (modalOpenEdit()) {
+        <div class="modal-edit">
+            <div
+                class="modal-edit-container"
+                [class.animate-edit]="animateModal()"
+                >
+                <div class="w-full flex flex-row items-center justify-between text-black">
+                    <h2 class="text-2xl font-semibold">Editar Transacción/Cuota</h2>
+                    <button (click)="closeEditModal()" type="button" class="text-3xl">
+                        <i class='bx  bx-x'  ></i> 
+                    </button>
+                </div>
+
+                <!-- Línea divisora -->
+                <span class="bg-gray-200 w-full h-0.5"></span>
+                <section class="w-full flex flex-row items-start justify-start gap-3 text-black">
+                    <button
+                        (click)="openEditTransaction()"
+                        class="card border-2 border-[#46E24D] p-4 rounded-2xl w-full font-medium">
+                        Editar Transacción
+                    </button>
+                    <button
+                        (click)="openEditCouta()"
+                        class="card border-2 border-[#46E24D] p-4 rounded-2xl w-full font-medium">
+                        Editar Cuota
+                    </button>
+                </section>
+            </div>
+        </div>
+    }
+    @if (modalEditTransaction()) {
+        <div class="modal-edit">
+            <div
+                class="modal-edit-container"
+                [class.animate-edit]="animateModal()"
+                >
+                <form
+                    [formGroup]="editarForm"
+                    class="w-full h-full flex flex-col gap-2 items-center justify-center">
+                    <div class="w-full flex flex-row items-center justify-between text-black">
+                        <h2 class="text-2xl font-semibold">Editar Transacción</h2>
+                        <button (click)="closeEditTransaction()" type="button" class="text-3xl">
+                            <i class='bx  bx-x'  ></i> 
+                        </button>
+                    </div>
+    
+                    <!-- Línea divisora -->
+                    <span class="bg-gray-200 w-full h-0.5"></span>
+                    <section class="w-full flex flex-col items-start justify-start gap-3 text-black">
+                        <div class="w-full flex flex-col gap-2 items-start justify-start">
+                            <label for="">Número de Transacción</label>
+                            <div class="w-full flex flex-row gap-2 items-start justify-start">
+                                <input
+                                    type="text"
+                                    formControlName="numeroTransaccion"
+                                    placeholder="Ingrese el número de transacción"
+                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                                <button
+                                    type="button"
+                                    (click)="consultarTransaccion()"
+                                    class="card bg-green-primary p-3 rounded-2xl w-full font-medium">
+                                    Consultar
+                                </button>
+                            </div>
+                            <p class="text-red-500 font-thin text-base">{{mensajeConsultarTransaccion}}</p>
+                        </div>
+    
+                        <div class="w-full flex flex-col gap-2 items-start justify-start">
+                            <label for="">Categoría</label>
+                            <input
+                                type="text"
+                                formControlName="categoria"
+                                placeholder="Categoría perteneciente"
+                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                        </div>
+    
+                        <div class="w-full flex flex-col gap-2 items-start justify-start">
+                            <label for="">Subcategoría</label>
+                            <input
+                                type="text"
+                                formControlName="subcategoria"
+                                placeholder="Subcategoría perteneciente"
+                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                        </div>
+    
+                        <div class="w-full flex flex-col gap-2 items-start justify-start">
+                            <label for="">Nota</label>
+                            <textarea
+                                placeholder="Ingrese la nueva nota de la transacción"
+                                formControlName="nota"
+                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"></textarea>
+                        </div>
+    
+                        <div class="w-full flex flex-row gap-2 items-center justify-between">
+                            <!-- Monto total -->
+                            <div class="w-3/5 flex flex-col gap-2 items-start justify-start">
+                                <label for="montoTotal">Monto Total</label>
+                                <input
+                                    type="number"
+                                    formControlName="montoTotal"
+                                    placeholder="$0.00"
+                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"
+                                >
+                            </div>
+                            <!-- Plazos -->
+                            <div class="w-2/5 flex flex-col gap-2 items-start justify-start">
+                                <label for="plazos">Número de plazos</label>
+                                <input
+                                    type="number"
+                                    formControlName="plazos"
+                                    placeholder="0"
+                                    class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"
+                                >
+                            </div>
+                        </div>
+    
+                        <button class="card bg-green-primary p-3 rounded-2xl w-full font-medium">Guardar Cambios</button>
+    
+                        <div class="w-full flex flex-row items-center justify-start gap-3 text-black">
+                            <button
+                                class="card bg-green-primary p-3 rounded-2xl w-full font-medium">
+                                Completar Transacción
+                            </button>
+                            <button
+                                class="card border-2 border-red-500 p-3 rounded-2xl w-full font-medium">
+                                Cancelar Transacción
+                            </button>
+                        </div>
+                    </section>
+                </form>
+            </div>
+        </div>
+    }
+    @if (modalEditCuota()) {
+        <div class="modal-edit">
+            <div
+                class="modal-edit-container"
+                [class.animate-edit]="animateModal()"
+                >
+                <div class="w-full flex flex-row items-center justify-between text-black">
+                    <h2 class="text-2xl font-semibold">Editar Cuotas</h2>
+                    <button (click)="closeEditCuota()" type="button" class="text-3xl">
+                        <i class='bx  bx-x'  ></i> 
+                    </button>
+                </div>
+
+                <!-- Línea divisora -->
+                <span class="bg-gray-200 w-full h-0.5"></span>
+                <section class="w-full flex flex-col items-start justify-start gap-3 text-black">
+                    <div class="w-full flex flex-col gap-2 items-start justify-start">
+                        <label for="">Número de Transacción</label>
+                        <div class="w-full flex flex-row gap-2 items-start justify-start">
+                            <input
+                                type="text"
+                                placeholder="Ingrese el número de transacción"
+                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                            <button class="card bg-green-primary p-3 rounded-2xl w-full font-medium">Consultar</button>
+                        </div>
+                    </div>
+
+                    <div class="w-full flex flex-row items-center justify-between text-black">
+                        <h2 class="text-2xl font-semibold">Cuotas</h2>
+                    </div>
+
+                    <!-- Línea divisora -->
+                    <span class="bg-gray-200 w-full h-0.5"></span>
+
+                    <section class="md:rounded-t-2xl overscroll-none overflow-auto w-full">
+                        <table class="w-full text-center">
+                            <thead class="text-black">
+                                <tr class="bg-zinc-200">
+                                    <th class="font-thin p-4">ID</th>
+                                    <th class="font-thin p-4">Monto</th>
+                                    <th class="font-thin p-4">Vencimiento</th>
+                                    <th class="font-thin p-4">Estatus</th>
+                                    <th class="font-thin p-4">Editar</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="font-thin p-4"></td>
+                                    <td class="font-thin p-4"></td>
+                                    <td class="font-thin p-4"></td>
+                                    <td class="font-thin p-4"></td>
+                                    <td class="font-thin p-4"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </section>
+                </section>
             </div>
         </div>
     }
