--- a/src/app/transactions/transactions.html
+++ b/src/app/transactions/transactions.html
@@ -19,7 +19,7 @@
                 <div>
                     <p class="text-lg text-white mb-1 font-light">Transacciones de Ingresos</p>
                     <div class="flex flex-row gap-2 items-center">
-                        <p class="text-3xl lg:text-5xl font-medium">$10,200.00 </p>
+                        <p class="text-3xl lg:text-5xl font-medium">${{montoIngresosTransacciones}}</p>
                         <p class="bg-categories text-xs p-1 lg:px-2 rounded-full">MXN</p>
                     </div>
                 </div>
@@ -27,7 +27,7 @@
                 <div>
                     <p class="text-lg text-white mb-1 font-light">Transacciones de Egresos</p>
                     <div class="flex flex-row gap-2 items-center">
-                        <p class="text-3xl lg:text-5xl font-medium">$3,600.00 </p>
+                        <p class="text-3xl lg:text-5xl font-medium">${{montoEgresosTransacciones}}</p>
                         <p class="bg-categories text-xs p-1 lg:px-2 rounded-full">MXN</p>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                 <div class="w-full">
                     <div class="flex flex-row items-center justify-between w-full">
                         <p class="text-sm text-white font-thin">Transacciones de Ingresos</p>
-                        <p class="font-semibold text-md">10</p>
+                        <p class="font-semibold text-md">{{numTransaccionesIngresos}}</p>
                     </div>
                     <span class="bg-green-primary w-full h-1 rounded-full block my-1"></span>
                 </div>
@@ -52,7 +52,7 @@
                 <div class="w-full">
                     <div class="flex flex-row items-center justify-between w-full">
                         <p class="text-sm text-zinc-300">Transacciones de Egresos</p>
-                        <p class="font-semibold text-lg">8</p>
+                        <p class="font-semibold text-lg">{{numTransaccionesEgresos}}</p>
                     </div>
                     <span class="bg-green-primary w-full h-1 rounded-full block my-1"></span>
                 </div>
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <!-- TRANSACCIONES PENDIENTES -->
+    <!-- Transacciones recientes -->
     <div class="slide-to-left mt-4 bg-gradient-gray-h p-6 rounded-2xl">
         <h3 class="text-xl mb-3 font-semibold">Últimas Transacciones</h3>
         <!-- Línea divisora -->
@@ -81,33 +81,26 @@
 
         <div class="flex gap-4 overflow-x-auto overscroll-none py-2">
 
-            <!-- TARJETA PENDIENTE -->
-            <div class="bg-zinc-900 min-w-[280px] rounded-2xl p-4 shadow-lg">
-                <div class="flex items-center gap-2 mb-2">
-                    <div class="w-10 h-10 bg-green-500 rounded-full flex items-center justify-center text-xl">
-                        💵
+            @for (transaccion of ultimasTransacciones; track transaccion.id_transaccion) {
+                <!-- TARJETA PENDIENTE -->
+                <div class="bg-zinc-900 min-w-[280px] rounded-2xl p-4 shadow-lg">
+                    <div class="flex items-center gap-2 mb-2">
+                        <div class="w-10 h-10 bg-green-500 rounded-full flex items-center justify-center text-xl">
+                            <i [class]="icons[+transaccion.icono_categoria]" class="p-2 bg-[#46E24D] rounded-full"></i>
+                        </div>
+                        <div>
+                            <p class="font-light">{{transaccion.categoria}}</p>
+                            @if (transaccion.tipo === 'ingreso') {
+                                <p class="text-green-400 text-sm font-light">Ingreso</p>
+                            }
+                            @else if (transaccion.tipo === 'egreso') {
+                                <p class="text-red-400 text-sm font-thin">Egreso</p>
+                            }
+                        </div>
                     </div>
-                    <div>
-                        <p class="font-semibold">Ingresos de Ventas</p>
-                        <p class="text-green-400 text-sm">Ingreso</p>
-                    </div>
+                    <p class="text-2xl font-bold">${{transaccion.monto_total}} <span class="text-sm">MXN</span></p>
                 </div>
-                <p class="text-2xl font-bold">$2,200.00 <span class="text-sm">MXN</span></p>
-            </div>
-
-            <!-- OTRA TARJETA -->
-            <div class="bg-zinc-900 min-w-[280px] rounded-2xl p-4 shadow-lg">
-                <div class="flex items-center gap-2 mb-2">
-                    <div class="w-10 h-10 bg-green-500 rounded-full flex items-center justify-center text-xl">
-                        ⚡
-                    </div>
-                    <div>
-                        <p class="font-semibold">Servicios Básicos</p>
-                        <p class="text-red-400 text-sm">Egreso</p>
-                    </div>
-                </div>
-                <p class="text-2xl font-bold">$1,400.00 <span class="text-sm">MXN</span></p>
-            </div>
+            }
         </div>
     </div>
 
@@ -177,7 +170,7 @@
                         <th class="font-thin p-4">Categoría</th>
                         <th class="font-thin p-4">Subcategoría</th>
                         <th class="font-thin p-4">Perfil Responsable</th>
-                        <th class="font-thin p-4">Cliente o Proveeodr</th>
+                        <th class="font-thin p-4">Cliente o Proveedor</th>
                         <th class="font-thin p-4">Monto</th>
                         <th class="font-thin p-4">Fecha de transacción</th>
                         <th class="font-thin p-4">Estatus</th>
@@ -369,6 +362,7 @@
                 >
                 <form
                     [formGroup]="editarForm"
+                    (ngSubmit)="actualizarTransaccion()"
                     class="w-full h-full flex flex-col gap-2 items-center justify-center">
                     <div class="w-full flex flex-row items-center justify-between text-black">
                         <h2 class="text-2xl font-semibold">Editar Transacción</h2>
@@ -386,7 +380,7 @@
                                 <input
                                     type="text"
                                     formControlName="numeroTransaccion"
-                                    placeholder="Ingrese el número de transacción"
+                                    placeholder="Ingrese el número"
                                     class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
                                 <button
                                     type="button"
@@ -447,19 +441,38 @@
                             </div>
                         </div>
     
-                        <button class="card bg-green-primary p-3 rounded-2xl w-full font-medium">Guardar Cambios</button>
+                        <button type="submit" class="card bg-green-primary p-3 rounded-2xl w-full font-medium">Guardar Cambios</button>
     
                         <div class="w-full flex flex-row items-center justify-start gap-3 text-black">
-                            <button
-                                class="card bg-green-primary p-3 rounded-2xl w-full font-medium">
-                                Completar Transacción
-                            </button>
-                            <button
-                                class="card border-2 border-red-500 p-3 rounded-2xl w-full font-medium">
-                                Cancelar Transacción
-                            </button>
+                            @if (flujoTransaccionConsultada() === 'efectivo') {
+                                <button
+                                    class="card bg-green-primary p-3 rounded-2xl w-full font-medium">
+                                    Completar Transacción
+                                </button>
+
+                                <button
+                                    type="button"
+                                    (click)="cancelarTransaccion()"
+                                    class="card border-2 border-red-500 p-3 rounded-2xl w-full font-medium">
+                                    Cancelar Transacción
+                                </button>
+                            }
+                            @else if (flujoTransaccionConsultada() === 'cuenta_por_cobrar' || flujoTransaccionConsultada() === 'cuenta_por_pagar'){
+                                <button
+                                    class="card bg-green-primary p-3 rounded-2xl w-full font-medium">
+                                    Abonar
+                                </button>
+
+                                <button
+                                    type="button"
+                                    (click)="cancelarTransaccion()"
+                                    class="card border-2 border-red-500 p-3 rounded-2xl w-full font-medium">
+                                    Cancelar Transacción
+                                </button>
+                            }
                         </div>
                     </section>
+                    <p class="text-red-500 font-thin text-base">{{mensajeEdit()}}</p>
                 </form>
             </div>
         </div>
