Cambios mínimos de diseño.

--- a/src/app/transactions/transactions.html
+++ b/src/app/transactions/transactions.html
@@ -85,7 +85,7 @@
                 <!-- TARJETA PENDIENTE -->
                 <div class="bg-zinc-900 min-w-[280px] rounded-2xl p-4 shadow-lg">
                     <div class="flex items-center gap-2 mb-2">
-                        <div class="w-10 h-10 bg-green-500 rounded-full flex items-center justify-center text-xl">
+                        <div class="w-10 h-10 rounded-full flex items-center justify-center text-xl">
                             <i [class]="icons[+transaccion.icono_categoria]" class="p-2 bg-[#46E24D] rounded-full"></i>
                         </div>
                         <div>
