--- a/src/app/transactions/transactions.css
+++ b/src/app/transactions/transactions.css
@@ -74,6 +74,36 @@
     transform: translateX(0);
 }
 
+.modal-cuota {
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    z-index: 1000;
+}
+
+.modal-edit-cuota {
+    background-color: #fff;
+    padding: 20px 20px;
+    width: 600px;
+    height: 100%;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: start;
+    align-items: center;
+    transform: translateX(100%);
+    transition: transform 0.20s ease;
+}
+
+.animate-cuota {
+    opacity: 1;
+    transform: translateX(0);
+}
+
 @media (max-width: 768px) {
     .modal-container {
         width: 100%;
